--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -4,20 +4,20 @@
   align-items: center;
   margin: 150px 150px 50px;
   padding: 20px;
-  border: 1px solid silver;
-  background-color: #fff;
+  background-color: #283046;
   border-radius: 10px;
 }
 
 .image {
   width: 450px;
+  border-radius: 100px;
 }
 
 .textContainer {
   text-align: left;
   margin-left: 30px;
   padding: 20px;
-  border: 1px solid silver;
+  border: 1px solid #1F2937;
   border-radius: 10px;
 }
 
@@ -27,12 +27,13 @@
 }
 
 .description {
-  color: rgb(62, 62, 62);
+  color: white;
+  line-height: 30px;
   margin-bottom: 30px;
 }
 
 .category {
-  color: rgb(62, 62, 62);
+  color: white;
   font-weight: bold;
   margin-bottom: 50px;
 }
