--- a/src/components/shared/Cart.module.css
+++ b/src/components/shared/Cart.module.css
@@ -2,9 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #fff;
+  background: #283046;
   padding: 15px;
-  border: 1px solid silver;
   margin-bottom: 20px;
   border-radius: 6px;
 }
