--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -1,10 +1,10 @@
 .mainContainer {
-  background-color: #fff;
+  background-color: #283046;
   margin: 0 0 100px;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 0px 5px 24px rgba(149, 157, 165, 0.4);
+  box-shadow: 0px 5px 24px #1f2937
 }
 
 .container {
