--- a/src/components/shared/Product.module.css
+++ b/src/components/shared/Product.module.css
@@ -1,9 +1,8 @@
 .container {
   width: 250px;
-  border: 1px solid silver;
   border-radius: 10px;
   overflow: hidden;
-  background-color: #fff;
+  background-color: #283046;
   margin: 0 10px 50px;
   transition: all 0.2s ease;
   text-align: center;
@@ -16,20 +15,21 @@
 }
 
 .cardImage {
+  border-radius: 20px;
   width: 230px;
   height: 200px;
   margin: 10px;
 }
 
 .container h3 {
-  color: #404040;
+  color: #EFEEFC;
   text-align: left;
   margin: 25px 20px 15px;
   font-size: 1.1rem;
 }
 
 .container p {
-  color: #404040;
+  color: #EFEEFC;
   text-align: left;
   margin: 15px 20px;
   font-size: 0.9rem;
