--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 150px 150px 50px;
   padding: 20px;
-  background-color: #283046;
+  background-color: #FFF;
   border-radius: 10px;
 }
 
@@ -17,7 +17,7 @@
   text-align: left;
   margin-left: 30px;
   padding: 20px;
-  border: 1px solid #1F2937;
+  border: 1px solid #aaaaaa;
   border-radius: 10px;
 }
 
@@ -27,13 +27,13 @@
 }
 
 .description {
-  color: white;
+  color: #636363;
   line-height: 30px;
   margin-bottom: 30px;
 }
 
 .category {
-  color: white;
+  color: #636363;
   font-weight: bold;
   margin-bottom: 50px;
 }
