--- a/src/components/shared/Cart.module.css
+++ b/src/components/shared/Cart.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #283046;
+  background: #FFF;
   padding: 15px;
   margin-bottom: 20px;
   border-radius: 6px;
