--- a/src/components/shared/Product.module.css
+++ b/src/components/shared/Product.module.css
@@ -2,7 +2,7 @@
   width: 250px;
   border-radius: 10px;
   overflow: hidden;
-  background-color: #283046;
+  background-color: #FFF;
   margin: 0 10px 50px;
   transition: all 0.2s ease;
   text-align: center;
@@ -22,14 +22,14 @@
 }
 
 .container h3 {
-  color: #EFEEFC;
+  color: #636363;
   text-align: left;
   margin: 25px 20px 15px;
   font-size: 1.1rem;
 }
 
 .container p {
-  color: #EFEEFC;
+  color: #636363;
   text-align: left;
   margin: 15px 20px;
   font-size: 0.9rem;
